Created product list infrastructure

--- a/ui/customer-ui/src/app/checkout/checkout.component.html
+++ b/ui/customer-ui/src/app/checkout/checkout.component.html
@@ -1,1 +1,15 @@
-<p>{{json}}</p>
+<div class="card-body">
+  <table class="table table-hover table-bordered">
+    <thead class="alert-info">
+    <tr>
+      <th>ID</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr >
+      <td>{{this.checkoutResponse.orderId}}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
