--- a/ui/customer-ui/src/app/app.component.html
+++ b/ui/customer-ui/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="card shadow">
     <br>
-    <h1 class="text-center">App component</h1>
+<!--    <h1 class="text-center">App component</h1>-->
     <router-outlet ></router-outlet>
     <br>
   </div>
