--- a/ui/customer-ui/src/app/app.component.html
+++ b/ui/customer-ui/src/app/app.component.html
@@ -1,10 +1,2 @@
-<br>
-
-<div class="container">
-  <div class="card shadow">
-    <br>
-<!--    <h1 class="text-center">App component</h1>-->
-    <router-outlet ></router-outlet>
-    <br>
-  </div>
-</div>
+<app-header></app-header>
+<router-outlet ></router-outlet>
