--- a/ui/customer-ui/src/app/header/header.component.html
+++ b/ui/customer-ui/src/app/header/header.component.html
@@ -18,7 +18,7 @@
     </li>
 
     <li class="nav-item dropdown" >
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop"
+      <a class="nav-link dropdown-toggle" id="navbardrop"
          data-toggle="dropdown" >PRODUCTS</a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="#">COFEE</a>
