--- a/ui/customer-ui/src/app/product-list/product-list.component.html
+++ b/ui/customer-ui/src/app/product-list/product-list.component.html
@@ -10,7 +10,7 @@
       </form>
     </div>
     <div class="col-8">
-      <app-result></app-result>
+      <app-product-list-result></app-product-list-result>
     </div>
   </div>
 </div>
