--- a/ui/customer-ui/src/app/product-list/slider/slider.component.html
+++ b/ui/customer-ui/src/app/product-list/slider/slider.component.html
@@ -22,4 +22,10 @@
       <img [src]="imageFo">
     </div>
   </ng-template>
+
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img [src]="imageSix">
+    </div>
+  </ng-template>
 </ngb-carousel>
