Added interaction with Input

--- a/ui/customer-ui/src/app/product-list/product-list-result/product-list-result.component.html
+++ b/ui/customer-ui/src/app/product-list/product-list-result/product-list-result.component.html
@@ -1,4 +1,4 @@
 <div class="card-body">
-  <app-popular-result></app-popular-result>
-  <app-product-list-main-result></app-product-list-main-result>
+  <app-popular-result [products]="products"></app-popular-result>
+  <app-product-list-main-result [products]="products"></app-product-list-main-result>
 </div>
