--- a/ui/customer-ui/src/app/product-list/product-list-result/popular-result/popular-result.component.html
+++ b/ui/customer-ui/src/app/product-list/product-list-result/popular-result/popular-result.component.html
@@ -37,7 +37,7 @@
               <div class="col-6">
                 <img src="../../../../assets/imagesProductList/coffee-bean-for-a-coffee-break.svg">
                 <img src="../../../../assets/imagesProductList/coffee-bean-for-a-coffee-break.svg">
-                <!--              https://www.flaticon.com/premium-icon/coffee-bean_1484412-->
+                <img src="../../../../assets/imagesProductList/coffee-bean-for-a-coffee-break.svg">
               </div>
             </div>
             <div class="bitter-beans row">
