Added output from search form

--- a/ui/customer-ui/src/app/checkout/checkout.component.html
+++ b/ui/customer-ui/src/app/checkout/checkout.component.html
@@ -7,7 +7,7 @@
     </thead>
     <tbody>
     <tr >
-      <td>{{this.checkoutResponse.orderId}}</td>
+      <td>{{this.checkoutResponse?.orderId}}</td>
     </tr>
     </tbody>
   </table>
