--- a/ui/customer-ui/src/app/product-list/product-list-result/product-list-main-result/product-list-main-result.component.html
+++ b/ui/customer-ui/src/app/product-list/product-list-result/product-list-main-result/product-list-main-result.component.html
@@ -1,10 +1,10 @@
 <div class="card-columns">
-  <div *ngFor="let product of products.products | slice:1"
+  <div *ngFor="let product of products?.products | slice:1"
        class="card">
     <img src="../../../../assets/imagesProductList/Image_Peru_Product%20Listing.png" class="card-img-top">
     <div class="container">
-      <a class="card-title" routerLink="/productDetails/{{this.product.productId}}">{{this.product.title}}</a>
-      <h3 class="card-price">USD {{this.product.price}}</h3>
+      <a class="card-title" routerLink="/productDetails/{{this.product?.productId}}">{{this.product.title}}</a>
+      <h3 class="card-price">USD {{this.product?.price}}</h3>
       <button class="add-to-card btn btn-dark" (click)="addToCard()">ADD TO CART</button>
     </div>
   </div>
