--- a/ui/customer-ui/src/app/product-list/product-list.component.html
+++ b/ui/customer-ui/src/app/product-list/product-list.component.html
@@ -6,11 +6,11 @@
   <div class="row">
     <div class="col-4">
       <form class="sticky-top">
-        <app-search-form></app-search-form>
+        <app-search-form (requestSearchForm)="submitSearchForm($event)"></app-search-form>
       </form>
     </div>
     <div class="col-8">
-      <app-product-list-result></app-product-list-result>
+      <app-product-list-result [products]="products"></app-product-list-result>
     </div>
   </div>
 </div>
