--- a/ui/customer-ui/src/app/product-list/search-form/search-form.component.html
+++ b/ui/customer-ui/src/app/product-list/search-form/search-form.component.html
@@ -175,7 +175,7 @@
     </div>
 
     <div class="font-weight-bold my-4 text-center">
-      <button ng-click="" type="submit" class="btn btn-outline-info button-reset">APPLY</button><br>
+      <button type="submit" class="btn btn-outline-info button-reset">APPLY</button><br>
       <button type="reset" class="btn btn-outline-secondary button-reset">RESET</button>
     </div>
 
