Created localstorage. Last time forgot add ADD to git

--- a/ui/customer-ui/src/app/product-list/search-form/search-form.component.html
+++ b/ui/customer-ui/src/app/product-list/search-form/search-form.component.html
@@ -20,30 +20,30 @@
         <div class="card-body">
           <div class="content">
             <div role="dropdown-content">
-              <input [formControlName]="'bitterMin'"
-                     type="radio" class="form-radio" value="1" name="bitterMin"> 1
-              <input [formControlName]="'bitterMin'"
-                     type="radio" class="form-radio" value="2" name="bitterMin"> 2
-              <input [formControlName]="'bitterMin'"
-                     type="radio" class="form-radio" value="3" name="bitterMin"> 3
-              <input [formControlName]="'bitterMin'"
-                     type="radio" class="form-radio" value="4" name="bitterMin"> 4
-              <input [formControlName]="'bitterMin'"
-                     type="radio" class="form-radio" value="5" name="bitterMin"> 5
+              <input [formControlName]="'bitterFrom'"
+                     type="radio" class="form-radio" value="1" name="bitterFrom"> 1
+              <input [formControlName]="'bitterFrom'"
+                     type="radio" class="form-radio" value="2" name="bitterFrom"> 2
+              <input [formControlName]="'bitterFrom'"
+                     type="radio" class="form-radio" value="3" name="bitterFrom"> 3
+              <input [formControlName]="'bitterFrom'"
+                     type="radio" class="form-radio" value="4" name="bitterFrom"> 4
+              <input [formControlName]="'bitterFrom'"
+                     type="radio" class="form-radio" value="5" name="bitterFrom"> 5
             </div>
           </div>
           <div class="content">
             <div role="dropdown-content">
-              <input [formControlName]="'bitterMax'"
-                     type="radio" class="form-radio" value="1" name="bitterMax"> 1
-              <input [formControlName]="'bitterMax'"
-                     type="radio" class="form-radio" value="2" name="bitterMax"> 2
-              <input [formControlName]="'bitterMax'"
-                     type="radio" class="form-radio" value="3" name="bitterMax"> 3
-              <input [formControlName]="'bitterMax'"
-                     type="radio" class="form-radio" value="4" name="bitterMax"> 4
-              <input [formControlName]="'bitterMax'"
-                     type="radio" class="form-radio" value="5" name="bitterMax"> 5
+              <input [formControlName]="'bitterTo'"
+                     type="radio" class="form-radio" value="1" name="bitterTo"> 1
+              <input [formControlName]="'bitterTo'"
+                     type="radio" class="form-radio" value="2" name="bitterTo"> 2
+              <input [formControlName]="'bitterTo'"
+                     type="radio" class="form-radio" value="3" name="bitterTo"> 3
+              <input [formControlName]="'bitterTo'"
+                     type="radio" class="form-radio" value="4" name="bitterTo"> 4
+              <input [formControlName]="'bitterTo'"
+                     type="radio" class="form-radio" value="5" name="bitterTo"> 5
             </div>
           </div>
         </div>
@@ -60,30 +60,30 @@
         <div class="card-body">
           <div class="content">
             <div role="dropdown-content">
-              <input [formControlName]="'sourMin'"
-                     type="radio" class="form-radio" value="1" name="sourMin"> 1
-              <input [formControlName]="'sourMin'"
-                     type="radio" class="form-radio" value="2" name="sourMin"> 2
-              <input [formControlName]="'sourMin'"
-                     type="radio" class="form-radio" value="3" name="sourMin"> 3
-              <input [formControlName]="'sourMin'"
-                     type="radio" class="form-radio" value="4" name="sourMin"> 4
-              <input [formControlName]="'sourMin'"
-                     type="radio" class="form-radio" value="5" name="sourMin"> 5
+              <input [formControlName]="'sourFrom'"
+                     type="radio" class="form-radio" value="1" name="sourFrom"> 1
+              <input [formControlName]="'sourFrom'"
+                     type="radio" class="form-radio" value="2" name="sourFrom"> 2
+              <input [formControlName]="'sourFrom'"
+                     type="radio" class="form-radio" value="3" name="sourFrom"> 3
+              <input [formControlName]="'sourFrom'"
+                     type="radio" class="form-radio" value="4" name="sourFrom"> 4
+              <input [formControlName]="'sourFrom'"
+                     type="radio" class="form-radio" value="5" name="sourFrom"> 5
             </div>
           </div>
           <div class="content">
             <div role="dropdown-content">
-              <input [formControlName]="'sourMax'"
-                     type="radio" class="form-radio" value="1" name="sourMax"> 1
-              <input [formControlName]="'sourMax'"
-                     type="radio" class="form-radio" value="2" name="sourMax"> 2
-              <input [formControlName]="'sourMax'"
-                     type="radio" class="form-radio" value="3" name="sourMax"> 3
-              <input [formControlName]="'sourMax'"
-                     type="radio" class="form-radio" value="4" name="sourMax"> 4
-              <input [formControlName]="'sourMax'"
-                     type="radio" class="form-radio" value="5" name="sourMax"> 5
+              <input [formControlName]="'sourTo'"
+                     type="radio" class="form-radio" value="1" name="sourTo"> 1
+              <input [formControlName]="'sourTo'"
+                     type="radio" class="form-radio" value="2" name="sourTo"> 2
+              <input [formControlName]="'sourTo'"
+                     type="radio" class="form-radio" value="3" name="sourTo"> 3
+              <input [formControlName]="'sourTo'"
+                     type="radio" class="form-radio" value="4" name="sourTo"> 4
+              <input [formControlName]="'sourTo'"
+                     type="radio" class="form-radio" value="5" name="sourTo"> 5
             </div>
           </div>
         </div>
@@ -144,10 +144,10 @@
         <div class="card-body">
           <div class="content">
             <div role="dropdown-content">
-              <input [formControlName]="'decoffeein'"
-                     type="radio" class="form-radio" value="yes" name="decoffeein"> Yes
-              <input [formControlName]="'decoffeein'"
-                     type="radio" class="form-radio" value="no" name="decoffeein"> No
+              <input [formControlName]="'decaf'"
+                     type="radio" class="form-radio" value="yes" name="decaf"> Yes
+              <input [formControlName]="'decaf'"
+                     type="radio" class="form-radio" value="no" name="decaf"> No
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
 
     <div class="font-weight-bold my-4 text-center">
       <button type="submit" class="btn btn-outline-info button-reset">APPLY</button><br>
-      <button type="reset" class="btn btn-outline-secondary button-reset">RESET</button>
+      <button type="reset" class="btn btn-outline-secondary button-reset" (click)="onReset()">RESET</button>
     </div>
 
   </div>
