--- a/ui/customer-ui/src/app/product-list/slider/slider.component.html
+++ b/ui/customer-ui/src/app/product-list/slider/slider.component.html
@@ -1,7 +1,31 @@
 <ngb-carousel>
   <ng-template ngbSlide>
-    <div class="picsum-img-wrapper" style="width: 100%">
-      <img [src]="imageSix">
+    <div class="picsum-img-wrapper">
+      <img [src]="imageSix" style="width: 100%">
+    </div>
+  </ng-template>
+
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img [src]="imageS" style="width: 100%">
+    </div>
+  </ng-template>
+
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img [src]="imageF" style="width: 100%">
+    </div>
+  </ng-template>
+
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img [src]="imageFo" style="width: 100%" >
+    </div>
+  </ng-template>
+
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img [src]="imageT" style="width: 100%">
     </div>
   </ng-template>
 </ngb-carousel>
